--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,8 +1,8 @@
 #### 图片圆角
 ```
 // @IBOutlet weak var thumbnailImageView: UIImageView!
-cell.thumbnailImageView.layer.cornerRadius = cell.thumbnailImageView.frame.size.width/2
-cell.thumbnailImageView.clipsToBounds = true
+thumbnailImageView.layer.cornerRadius = cell.thumbnailImageView.frame.size.width/2
+thumbnailImageView.clipsToBounds = true
 ```
 #### 取消按钮
 ```
