--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,7 +1,7 @@
 #### 图片圆角
 ```
 // @IBOutlet weak var thumbnailImageView: UIImageView!
-thumbnailImageView.layer.cornerRadius = cell.thumbnailImageView.frame.size.width/2
+thumbnailImageView.layer.cornerRadius = thumbnailImageView.frame.size.width/2
 thumbnailImageView.clipsToBounds = true
 ```
 #### 取消按钮
