--- a/代码碎片.md
+++ b/代码碎片.md
@@ -3,6 +3,13 @@
 // @IBOutlet weak var thumbnailImageView: UIImageView!
 thumbnailImageView.layer.cornerRadius = thumbnailImageView.frame.size.width/2
 thumbnailImageView.clipsToBounds = true
+
+// 封装一下
+func setImageRadius(image:UIImageView, radius:CGFloat) {
+  image.layer.cornerRadius = radius
+  image.clipsToBounds = true
+}
+setImageRadius(thumbnailImageView, radius: thumbnailImageView.frame.size.width/2)
 ```
 #### 取消按钮
 ```
