--- a/代码碎片.md
+++ b/代码碎片.md
@@ -30,8 +30,23 @@ let optionMenu = UIAlertController(
 optionMenu.addAction(cancelAction)
 self.presentViewController(optionMenu, animated: true, completion: nil)
 ```
-
-
+#### 移除额外的表格线
+```
+// @IBOutlet weak var tableView: UITableView!
+// code in: viewDidLoad()
+self.tableView.tableFooterView = UIView(frame: CGRectZero)
+```
+#### 移除表格cell的背景色
+```
+// code in: tableView(_:cellForRowAtIndexPath:)
+cell.backgroundColor = UIColor.clearColor()
+```
+#### 设置表格分割线的颜色
+```
+// @IBOutlet weak var tableView: UITableView!
+// code in: viewDidLoad()
+self.tableView.separatorColor = UIColor(red: 240.0/255.0, green: 240.0/255.0, blue: 240.0/255.0, alpha: 0.8)
+```
 
 
 
