--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,3 +1,5 @@
+## iOS SDK 8.3
+
 #### 图片圆角
 ```
 // @IBOutlet weak var thumbnailImageView: UIImageView!
@@ -47,6 +49,18 @@ cell.backgroundColor = UIColor.clearColor()
 // code in: viewDidLoad()
 self.tableView.separatorColor = UIColor(red: 240.0/255.0, green: 240.0/255.0, blue: 240.0/255.0, alpha: 0.8)
 ```
+#### 隐藏back按钮标题
+```
+// 这个是要写在父窗口(通常是segue左边) viewDidLoad() 里面
+// 而不是出现 back buttom 的那个 view 哦
+self.navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .Plain, 	target: nil, action: nil)
+
+// 设置 某个view 的 Navigation item title
+// code in: viewDidLoad()
+// 直接设置即可
+title = "the new title"
+```
+
 
 
 
