--- a/代码碎片.md
+++ b/代码碎片.md
@@ -60,6 +60,34 @@ self.navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .Plain
 // 直接设置即可
 title = "the new title"
 ```
+#### 修改状态拦的颜色（默认黑色，还有个亮色）
+```
+// 1)
+override func preferredStatusBarStyle() -> UIStatusBarStyle {
+  return .LightContent
+}
+
+// 2) 要先进行设置 info -> Custom iOS Target Properties -> add "View controller-based status bar appearance" -> NO
+// code in : AppDelegate.swift -> func application(application:didFinishLaunchingWithOptions:)
+UIApplication.sharedApplication().statusBarStyle = .LightContent
+```
+#### 导航栏底色(包括电池栏)、字体颜色大小等
+```
+// code in : AppDelegate.swift -> func application(application:didFinishLaunchingWithOptions:)
+let appearance = UINavigationBar.appearance()
+
+// 底色
+appearance.barTintColor = UIColor(red:231.0/255.0, green: 95.0/255.0, blue: 53.0/255.0, alpha: 0.3)
+
+// 字体颜色，类型和大小
+// http://iosfonts.com/
+if let barFont = UIFont(name: "AvenirNextCondensed-DemiBold", size: 22.0) {
+  appearance.titleTextAttributes = [NSForegroundColorAttributeName:UIColor.whiteColor(), NSFontAttributeName:barFont]
+}
+
+// 色调（比如 back buttom 的左剪头）
+appearance.tintColor = UIColor.whiteColor()
+```
 
 
 
