--- a/代码碎片.md
+++ b/代码碎片.md
@@ -88,7 +88,12 @@ if let barFont = UIFont(name: "AvenirNextCondensed-DemiBold", size: 22.0) {
 // 色调（比如 back buttom 的左剪头）
 appearance.tintColor = UIColor.whiteColor()
 ```
-
+#### Enabling Self Sizing Cells
+```
+// 记得：Setting the Label Lines to Zero
+tableView.estimatedRowHeight = 36.0
+tableView.rowHeight = UITableViewAutomaticDimension
+```
 
 
 
