--- a/代码碎片.md
+++ b/代码碎片.md
@@ -12,6 +12,11 @@ func setImageRadius(image:UIImageView, radius:CGFloat) {
   image.clipsToBounds = true
 }
 setImageRadius(thumbnailImageView, radius: thumbnailImageView.frame.size.width/2)
+
+// 或者在 Show the indentity inspector -> User Defined Runtime Attributes
+Key Path = layer.cornerRadius
+Type     = Number
+Value    = 30 // or other
 ```
 #### 取消按钮
 ```
