--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,14 @@
 ## iOS SDK 8.3
 
+#### 图片模糊
+```
+// @IBOutlet weak var backgroundImageView: UIImageView!
+var blurEffect = UIBlurEffect(style: .Dark) // Dark, Light and ExtraLight
+var blurEffectView = UIVisualEffectView(effect: blurEffect)
+
+blurEffectView.frame = view.bounds
+backgroundImageView.addSubview(blurEffectView)
+```
 #### 图片圆角
 ```
 // @IBOutlet weak var thumbnailImageView: UIImageView!
