--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,30 @@
 ## iOS SDK 8.3
 
+#### 动画
+```
+// @IBOutlet weak var dialogView: UIView!
+
+// code in : viewDidLoad
+// 这是两个动画合并，也可以单独分开
+dialogView.transform = CGAffineTransformConcat(
+  CGAffineTransformMakeScale(0.0, 0.0), 
+  CGAffineTransformMakeTranslation(0, 500)
+)
+
+// code in : viewDidAppear
+UIView.animateWithDuration(1.0, 
+  delay: 0.0, 
+  usingSpringWithDamping: 0.6,  // 弹簧阻尼
+  initialSpringVelocity: 0.5, // 初始弹簧速度
+  options: nil, 
+  animations: {
+    self.dialogView.transform = CGAffineTransformConcat(
+      CGAffineTransformMakeScale(1.0, 1.0), 
+      CGAffineTransformMakeTranslation(0, 0)
+    )
+  }, 
+  completion: nil)
+```
 #### 图片模糊
 ```
 // @IBOutlet weak var backgroundImageView: UIImageView!
