--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,11 @@
 ## iOS SDK 8.3
 
+
+#### 数字字符串 类型转换成 Double
+```
+NSNumberFormatter().numberFromString("3.14")!.doubleValue
+```
+
 #### 动画
 ```
 // @IBOutlet weak var dialogView: UIView!
