--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,19 @@
 ## iOS SDK 8.3
 
+#### 随机数
+```
+
+// arc4random
+// 这个全局函数会生成10位数的随机整数
+// 例如：arc4random() => 2108123455
+// 下面是使用arc4random函数求一个1~100的随机数（包括1和100）
+var temp:Int = Int(arc4random()%100)+1
+
+// arc4random_uniform
+// 例如：arc4random_uniform(2) => [0,2) 即 [0,1]
+// 下面是使用arc4random_uniform函数求一个1~100的随机数（包括1和100）
+var temp:Int = Int(arc4random_uniform(100))+1
+```
 
 #### 数字字符串 类型转换成 Double
 ```
