--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,8 +1,19 @@
 ## iOS SDK 8.3
 
-#### 随机数
+
+#### 浮点数转换成整数（四舍五入与直接截断）
+```
+// 直接截去小数部分转换成整数
+// 使用强制转换会将浮点部分去除，把整数部分转换为整数
+var i = Int(23.50) //23
+
+// 四舍五入转换成整数
+// lroundf是一个全局函数，作用是将浮点数四舍五入转为整数
+var i = lroundf(23.50) //24
 ```
 
+#### 随机数
+```
 // arc4random
 // 这个全局函数会生成10位数的随机整数
 // 例如：arc4random() => 2108123455
