--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,30 @@
 ## iOS SDK 8.3
 
+#### Slider组件 和 图片拉伸
+```
+// @IBOutlet weak var slider: UISlider!
+
+// 设置slider的按钮
+let thumbImageNormal = UIImage(named: "SliderThumb-Normal")
+slider.setThumbImage(thumbImageNormal, forState: .Normal)
+
+let thumbImageHighlighted = UIImage(named: "SliderThumb-Highlighted")
+slider.setThumbImage(thumbImageHighlighted, forState: .Highlighted)
+
+// 设置图片拉伸范围
+let insets = UIEdgeInsets(top: 0, left: 14, bottom: 0, right: 14)
+
+// 把可以拉伸的图片，放到slider的左边
+if let trackLeftImage = UIImage(named: "SliderTrackLeft") {
+  let trackLeftResizable = trackLeftImage.resizableImageWithCapInsets(insets)
+  slider.setMinimumTrackImage(trackLeftResizable, forState: .Normal)
+}
+// 把可以拉伸的图片，放到slider的右边
+if let trackRightImage = UIImage(named: "SliderTrackRight") {
+  let trackRightResizable = trackRightImage.resizableImageWithCapInsets(insets)
+  slider.setMaximumTrackImage(trackRightResizable, forState: .Normal)
+}
+```
 
 #### 浮点数转换成整数（四舍五入与直接截断）
 ```
