--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,15 @@
 ## iOS SDK 8.3
 
+#### 加载本地html代码
+```
+// @IBOutlet weak var webView: UIWebView!
+
+// 根目录下有个www目录，www目录下有个 index.html
+if let url = NSBundle.mainBundle().URLForResource("www/index", withExtension: "html") {
+  webView.loadRequest( NSURLRequest(URL: url) )
+}
+```
+
 #### Slider组件 和 图片拉伸
 ```
 // @IBOutlet weak var slider: UISlider!
