--- a/代码碎片.md
+++ b/代码碎片.md
@@ -5,6 +5,9 @@
 // @IBOutlet weak var webView: UIWebView!
 
 // 根目录下有个www目录，www目录下有个 index.html
+// Destination   勾选  Copy items if needed
+// Added folders 选择  Create folder references
+// 图片也放这个www目录，index.html 可以使用相对位置进行引用
 if let url = NSBundle.mainBundle().URLForResource("www/index", withExtension: "html") {
   webView.loadRequest( NSURLRequest(URL: url) )
 }
