--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,13 @@
 ## iOS SDK 8.3
 
+### UITableView里面的 cell 获取它里面的对象（比如UILabel）
+```
+let cell = tableView.dequeueReusableCellWithIdentifier("cellIdentifierName", forIndexPath: indexPath) as! UITableViewCell
+// 这里的 label 不能使用 @IBOutlet,因为多个cell里面有多个 UILabel
+// 设置 UILabel "属性" -> "View" -> Tag = 1000 （或者任意其他值）
+let label = cell.viewWithTag(1000) as! UILabel
+```
+
 #### 加载本地html代码
 ```
 // @IBOutlet weak var webView: UIWebView!
