--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,14 @@
 ## iOS SDK 8.3
 
+### 输入框（UITextField）获取焦点
+```
+// @IBOutlet weak var textField: UITextField!
+override func viewWillAppear(animated: Bool) {
+  super.viewWillAppear(animated)
+  textField.becomeFirstResponder()
+}
+```
+
 ### UITableView里面的 cell 获取它里面的对象（比如UILabel）
 ```
 let cell = tableView.dequeueReusableCellWithIdentifier("cellIdentifierName", forIndexPath: indexPath) as! UITableViewCell
