--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,61 @@
 ## iOS SDK 8.3
 
+### 代理(delegate) 五步曲
+Delegates in five easy steps
+In review, these are the steps for setting up the delegate pattern between two objects, where object A is the delegate for object B, and object B will send out the messages:
+  1. Define a delegate protocol for object B.
+  2. Give object B an optional delegate variable. This variable should be weak.
+  3. Make object B send messages to its delegate when something interesting happens, such as the user pressing the Cancel or Done buttons, or when it needs a piece of information.
+  4. Make object A conform to the delegate protocol. It should put the name of the protocol in its class line and implement the methods from the protocol.
+  5. Tell object B that object A is now its delegate.
+dd
+```
+// 第5步，
+// 第一种可能：某个controller里面的元素代理，就比如 class A:UIViewController, UITextFieldDelegate
+@IBOutlet weak var textField: UITextField!
+textField.delegate = self
+
+// 第二种就是跨两个 viewController：Tell object B that object A is now its delegate.
+// 在A里面写：
+override func prepareForSegue(segue: UIStoryboardSegue, sender: AnyObject?) {
+  // segueIdentifierName是指向B的segue identifier name
+  if segue.identifier == "segueIdentifierName" {
+    
+    // 如果 A -> B
+    let controller = segue.destinationViewController as! BController 
+    controller.delegate = self
+    
+    // ---------- 分割线 -----------
+    
+    // 如果A -> navigationController -> B
+    let navigationController = segue.destinationViewController as! UINavigationController
+    let controller = navigationController.topViewController as! BController
+    controller.delegate = self
+     
+  }
+}
+```
+
+
+### 时刻获取 UITextField 里面的值
+```
+// @IBOutlet weak var doneBarButton: UIBarButtonItem!
+
+// 顶部 class 需要添加 UITextFieldDelegate 代理
+func textField(textField: UITextField, shouldChangeCharactersInRange range: NSRange, replacementString string: String) -> Bool {
+    
+    let oldText: NSString = textField.text
+    // newText就是当前textField的值，使用时需要转换一下成String类型
+    let newText: NSString = oldText.stringByReplacingCharactersInRange(range, withString: string)
+    
+    // 可以时刻判断done按钮，启用和禁用等等
+    // doneBarButton.enabled = (newText.length > 0)
+    
+    return true
+}
+
+```
+
 ### 输入框（UITextField）获取焦点
 ```
 // @IBOutlet weak var textField: UITextField!
