--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,15 @@
 ## iOS SDK 8.3
 
+### UITableView 下划线左边15间隙处理
+```
+// http://stackoverflow.com/questions/25770119/ios-8-uitableview-separator-inset-0-not-working
+// 1) 首先设置 cell 的属性: Table View Cell -> Separator -> Custom Insets -> left 0, right 0
+
+// 2) 然后在 tableView(cellForRowAtIndexPath) 方法中加上：
+cell.preservesSuperviewLayoutMargins = false
+cell.layoutMargins = UIEdgeInsetsZero
+```
+
 ### 代理(delegate) 五步曲
 Delegates in five easy steps
 In review, these are the steps for setting up the delegate pattern between two objects, where object A is the delegate for object B, and object B will send out the messages:
