--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,22 @@
 ## iOS SDK 8.3
 
+### 动态创建 UITableViewCell
+```
+override func tableView(tableView: UITableView, cellForRowAtIndexPath indexPath: NSIndexPath) -> UITableViewCell {
+  let cellIdentifier = "Cell"
+  
+  var cell: UITableViewCell! = tableView.dequeueReusableCellWithIdentifier(cellIdentifier) as? UITableViewCell
+  
+  if cell == nil {
+      cell = UITableViewCell(style: .Default, reuseIdentifier: cellIdentifier)
+  }
+  
+  cell.textLabel?.text = "List \(indexPath.row)"
+
+  return cell
+}
+```
+
 ### UITableView 下划线左边15间隙处理
 ```
 // http://stackoverflow.com/questions/25770119/ios-8-uitableview-separator-inset-0-not-working
