--- a/代码碎片.md
+++ b/代码碎片.md
@@ -91,7 +91,18 @@ override func viewWillAppear(animated: Bool) {
   textField.becomeFirstResponder()
 }
 ```
-
+### 失去焦点, 关闭键盘
+```
+textField.resignFirstResponder()
+```
+### 禁止tableView滚动
+```
+tableView.scrollEnabled = false
+```
+### 获取当前时间戳
+```
+NSDate().timeIntervalSince1970  // float 类型
+```
 ### UITableView里面的 cell 获取它里面的对象（比如UILabel）
 ```
 let cell = tableView.dequeueReusableCellWithIdentifier("cellIdentifierName", forIndexPath: indexPath) as! UITableViewCell
@@ -203,6 +214,16 @@ var blurEffectView = UIVisualEffectView(effect: blurEffect)
 blurEffectView.frame = view.bounds
 backgroundImageView.addSubview(blurEffectView)
 ```
+### 边线
+```
+myView.layer.borderWidth = 1
+myView.layer.borderColor = UIColor.blackColor().CGColor
+```
+### 圆角
+```
+myView.layer.cornerRadius = 20
+myView.layer.masksToBounds = true
+```
 #### 图片圆角
 ```
 // @IBOutlet weak var thumbnailImageView: UIImageView!
@@ -295,6 +316,11 @@ if let barFont = UIFont(name: "AvenirNextCondensed-DemiBold", size: 22.0) {
 
 // 色调（比如 back buttom 的左剪头）
 appearance.tintColor = UIColor.whiteColor()
+```
+### 隐藏navigation bar 的下边线
+```
+navigationController?.navigationBar.shadowImage = UIImage()
+navigationController?.navigationBar.setBackgroundImage(UIImage(), forBarMetrics: .Default)
 ```
 #### Enabling Self Sizing Cells
 ```
