--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,4 +1,21 @@
 ## iOS SDK 8.3
+### 下拉刷新
+```
+var refreshControl:UIRefreshControl!
+
+override func viewDidLoad() {
+  super.viewDidLoad()
+
+  self.refreshControl = UIRefreshControl()
+  self.refreshControl.attributedTitle = NSAttributedString(string: "Pull to refresh")
+  self.refreshControl.addTarget(self, action: "refresh:", forControlEvents: UIControlEvents.ValueChanged)
+  self.tableView.addSubview(refreshControl)
+}
+
+func refresh(sender:AnyObject) {
+  // Code to refresh table view  
+}
+```
 
 ### 动态创建 UITableViewCell
 ```
