--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,4 +1,15 @@
 ## iOS SDK 8.3
+
+### 延迟运行
+```
+// 延迟2秒打印 hello world
+let delay = 2.0 * Double(NSEC_PER_SEC)
+var time = dispatch_time(DISPATCH_TIME_NOW, Int64(delay))
+dispatch_after(time, dispatch_get_main_queue(), {
+  println("hello world")
+})
+```
+
 ### 下拉刷新
 ```
 var refreshControl:UIRefreshControl!
