--- a/代码碎片.md
+++ b/代码碎片.md
@@ -1,5 +1,12 @@
 ## iOS SDK 8.3
 
+### NSNumber -> Int
+```
+// Using .integerValue on the NSNumber turns it back into an Int 
+var number:NSNumber = 123
+var num:Int = number.integerValue 
+```
+
 ### Remove navigationBar border to swift
 ```
 // http://stackoverflow.com/questions/25751299/convert-remove-navigationbar-border-to-swift
