updata 遇到过的坑.md

--- a/遇到过的坑.md
+++ b/遇到过的坑.md
@@ -65,3 +65,23 @@ func textFieldDidEndEditing(textField: UITextField) {
 }
 
 ```
+
+###  xcode6.4 取色偏差
+
+被这个坑惨了！！！！  
+
+后来搜索到了一些东西：  
+https://github.com/Xummer/ColorDifferenceDemo  
+http://rickytan.cn/blog/2014/05/26/uicolor-and-colorpicker-in-ib/  
+http://stackoverflow.com/questions/7488378/weird-colors-in-xcode-interface-builder
+
+1. 先用 取色工具（或其他方式） 获取你想要的正确 RGB 值
+2. 然后在 colors 工具拦，选择 RGB Sliders 
+3. 然后点击旁边那个小小的设置图标，选择：Generic RGB
+4. 再填入第一步的RGB值，保存，完。
+
+### itunesconnect 上传 App 视频预览和屏幕快照
+
+如果是用 模拟器 截图的一定要改名字。比如：1.png，2.png，3.png ...
+
+这样才可以上传成功！
